# ansible-lookup-plugin

./: .gitignore  README.md  pyproject.toml
playground/: test.yaml
playground/templates/: subject.md.j2
plugins/lookup/: sis.py
